Integrating web visit memory in browser agent (#1215)
- Refactor website visit memory into separate memory package built on
knowpro
- Integrate website scenarios with dispatcher indexing
- Integrate memory package with browser agent. Add actions to import and
search website visit data.

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -56,6 +56,7 @@
     "readline": "^1.3.0",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
+    "website-memory": "workspace:*",
     "ws": "^8.17.1"
   },
   "devDependencies": {
