integrate websiste semantic search with URL resolve logic

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -48,6 +48,7 @@
     "dompurify": "^3.2.5",
     "html-to-text": "^9.0.5",
     "jsonpath": "^1.1.1",
+    "knowpro": "workspace:*",
     "prismjs": "^1.30.0",
     "puppeteer": "^23.8.0",
     "puppeteer-extra": "^3.3.6",
