--- a/ts/examples/schemaStudio/package.json
+++ b/ts/examples/schemaStudio/package.json
@@ -22,6 +22,9 @@
     "tsc": "tsc -p src"
   },
   "dependencies": {
+      "@azure/ai-agents": "^1.0.0-beta.3",
+    "@azure/ai-projects": "^1.0.0-beta.8",
+    "@azure/identity": "^4.10.0",
     "action-schema": "workspace:*",
     "aiclient": "workspace:*",
     "dotenv": "^16.3.1",
