Enable direct user edits in the markdown view (#1)
* integrate milkdown prototype as viewer/editor for markdown

* Update bundling implementation

* Investigating 404 when accessing api endpoints

* Enable collaboration in editing canvas

* AI presence indicators

* Remove split view

* Simplified editor integration

* Fix build errors

* Update test output streaming

* diagrams plugin

* Mermaid diagram plugin working in editor

* Parse markdown into prosemirror format when adding content from LLM

* Fixed content from /test:augment

* Inline equations now rendering

* Improve spaces in text content

* cleanup unused functions and variables

* Update styles

* Refactor view/site/index.ts to improve maintanability
Apply lint and policy fixes

* Clean up vite integration

* integrating LLM handlers

* styling for command content

* Remove duplicate content in test flow

* Add ability to share URLs
Remove debug content panel

* Implement Flow 1 & 2 simplification - Phase 1-5

- Enhanced logging for current behavior analysis
- Added auto-save mechanism with 2-second batching
- Implemented UI command routing from view to agent process
- Added IPC protocol for unified LLM processing
- Updated frontend to handle new notification format
- Consolidated LLM logic in agent process for both CLI and UI flows

Key changes:
- Flow 1: Agent owns Yjs operations, view handles auto-save
- Flow 2: UI commands routed to agent via IPC instead of direct LLM
- Single source of truth for AI processing in agent process
- Backward compatibility maintained during transition

* Fix TypeScript compilation errors

- Fixed ActionResult data access with proper type casting
- Removed duplicate methods in collaborationManager
- Added markdown renderer initialization
- Temporarily removed unused auto-save functions (will re-add in Phase 6)
- All TypeScript compilation errors resolved

Ready for Phase 6 testing and validation

* Notification correctly shows error message if calls fail

* Clean up comm

--- a/ts/packages/agents/markdown/src/view/route/tsconfig.json
+++ b/ts/packages/agents/markdown/src/view/route/tsconfig.json
@@ -3,9 +3,12 @@
   "compilerOptions": {
     "composite": true,
     "rootDir": ".",
-    "outDir": "../../../dist/view/route",
+    "outDir": "../../../dist/view/route"
   },
   "include": ["./*","./plugins/*"],
+  "references": [
+    { "path": "../../agent" }
+  ],
   "ts-node": {
     "esm": true
   }
