--- a/ts/packages/agents/markdown/src/view/site/tsconfig.json
+++ b/ts/packages/agents/markdown/src/view/site/tsconfig.json
@@ -9,6 +9,9 @@
     "moduleResolution": "bundler",
     "module": "ESNext",
     "lib": ["DOM"],
+    "verbatimModuleSyntax": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
   },
   "include": ["./*"],
   "ts-node": {
