--- a/ts/packages/agents/markdown/package.json
+++ b/ts/packages/agents/markdown/package.json
@@ -40,6 +40,7 @@
     "aiclient": "workspace:*",
     "common-utils": "workspace:*",
     "debug": "^4.3.4",
+    "dompurify": "^3.2.6",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "katex": "^0.16.21",
@@ -66,11 +67,11 @@
     "@types/katex": "^0.16.7",
     "@types/markdown-it": "^14.1.2",
     "@types/ws": "^8.5.8",
-    "concurrently": "^8.2.2",
     "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
+    "sanitize-filename": "^1.6.3",
     "typescript": "~5.4.5",
     "vite": "^4.5.14"
   }
