--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -15,7 +15,9 @@
   "exports": {
     "./agent/manifest": "./src/agent/manifest.json",
     "./agent/handlers": "./dist/agent/actionHandler.mjs",
-    "./agent/interface": "./dist/agent/interface.mjs"
+    "./agent/types": "./dist/agent/browserControl.mjs",
+    "./contentScriptRpc/types": "./dist/common/contentScriptRpc/types.mjs",
+    "./contentScriptRpc/client": "./dist/common/contentScriptRpc/client.mjs"
   },
   "main": "index.js",
   "scripts": {
