Incremental build support

--- a/ts/packages/agents/markdown/.gitignore
+++ b/ts/packages/agents/markdown/.gitignore
@@ -1,8 +1,3 @@
-node_modules
-public/js/*.js
-public/js/*.js.map
-public/js/*.d.ts
-
 # Build outputs
 dist/
 *.tsbuildinfo
@@ -10,6 +5,10 @@ dist/
 
 # Build cache
 .vite-build-hash
+.vite-vendor-cache.json
+
+# Dependencies
+node_modules/
 
 # Environment
 .env
