--- a/ts/packages/agents/browser/.gitignore
+++ b/ts/packages/agents/browser/.gitignore
@@ -8,6 +8,13 @@ node_modules/
 *.out.txt
 *.bat
 
+# TypeScript build info
+.tsbuildinfo/
+*.tsbuildinfo
+
+# Build cache
+.extension-build-hash
+
 # Local development and debugging
 .scratch/
 .vscode
