--- a/ts/packages/agents/planVisualizer/package.json
+++ b/ts/packages/agents/planVisualizer/package.json
@@ -16,16 +16,16 @@
     "./agent/handlers": "./dist/agent/planViewActionHandler.js"
   },
   "scripts": {
-    "build": "npm run build:shared && npm run build:server && npm run build:agent && npm run build:client",
+    "build": "concurrently npm:build:shared npm:build:server npm:build:agent npm:build:client",
     "postbuild": "copyfiles -u 1 \"src/**/config.json\" dist",
-    "build:agent": "tsc -p src/agent/tsconfig.json",
+    "build:agent": "tsc --build src/agent/tsconfig.json",
     "build:client": "vite build",
-    "build:server": "tsc -p src/view/server/tsconfig.json",
-    "build:shared": "tsc -p src/view/shared/tsconfig.json",
+    "build:server": "tsc --build src/view/server/tsconfig.json",
+    "build:shared": "tsc --build src/view/shared/tsconfig.json",
     "clean": "rimraf dist",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npx nodemon --experimental-specifier-resolution=node dist/view/server/server.js 9052 \"",
     "dev:client": "vite dev",
-    "dev:server": "tsc -p src/view/server/tsconfig.json --watch",
+    "dev:server": "tsc --build src/view/server/tsconfig.json --watch",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
     "start": "node --experimental-specifier-resolution=node dist/view/server/server.js"
