--- a/ts/packages/agents/markdown/package.json
+++ b/ts/packages/agents/markdown/package.json
@@ -18,8 +18,9 @@
   "scripts": {
     "build": "npm run tsc && npm run build:frontend",
     "postbuild": "copyfiles -u 1 \"src/**/config.json\" dist",
-    "build:frontend": "vite build",
-    "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
+    "build:frontend": "node scripts/build.mjs",
+    "build:frontend:force": "vite build",
+    "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log .smart-build-cache.json",
     "dev": "npm run tsc && node scripts/dev-viewer.js --hmr",
     "dev:frontend": "vite  --watch",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
