Check for changes when building components in browser agent project

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -23,15 +23,15 @@
     "build:deps": "npm run tsc:common",
     "build:parallel": "concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck",
     "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite:dev npm:tsc:typecheck",
-    "clean": "rimraf dist deploy",
+    "clean": "rimraf dist deploy .tsc-cache-*.json",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
     "test": "jest",
-    "tsc:agent": "tsc --build src/agent/tsconfig.json",
-    "tsc:common": "tsc --build src/common/tsconfig.json",
-    "tsc:puppeteer": "tsc --build src/puppeteer/tsconfig.json",
-    "tsc:typecheck": "tsc --noEmit -p tsconfig.json",
+    "tsc:agent": "node scripts/cachedBuild.mjs agent \"tsc --build src/agent/tsconfig.json\"",
+    "tsc:common": "node scripts/cachedBuild.mjs common \"tsc --build src/common/tsconfig.json\"",
+    "tsc:puppeteer": "node scripts/cachedBuild.mjs puppeteer \"tsc --build src/puppeteer/tsconfig.json\"",
+    "tsc:typecheck": "node scripts/cachedBuild.mjs typecheck \"tsc --noEmit -p tsconfig.json\"",
     "vite": "node scripts/buildExtension.mjs",
     "vite:dev": "node scripts/buildExtension.mjs --dev"
   },
