Enable cached build for plan visualizer

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -28,10 +28,10 @@
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
     "test": "jest",
-    "tsc:agent": "node scripts/cachedBuild.mjs agent \"tsc --build src/agent/tsconfig.json\"",
-    "tsc:common": "node scripts/cachedBuild.mjs common \"tsc --build src/common/tsconfig.json\"",
-    "tsc:puppeteer": "node scripts/cachedBuild.mjs puppeteer \"tsc --build src/puppeteer/tsconfig.json\"",
-    "tsc:typecheck": "node scripts/cachedBuild.mjs typecheck \"tsc --noEmit -p tsconfig.json\"",
+    "tsc:agent": "node scripts/build.mjs agent \"tsc --build src/agent/tsconfig.json\"",
+    "tsc:common": "node scripts/build.mjs common \"tsc --build src/common/tsconfig.json\"",
+    "tsc:puppeteer": "node scripts/build.mjs puppeteer \"tsc --build src/puppeteer/tsconfig.json\"",
+    "tsc:typecheck": "node scripts/build.mjs typecheck \"tsc --noEmit -p tsconfig.json\"",
     "vite": "node scripts/buildExtension.mjs",
     "vite:dev": "node scripts/buildExtension.mjs --dev"
   },
