--- a/ts/packages/agents/planVisualizer/package.json
+++ b/ts/packages/agents/planVisualizer/package.json
@@ -18,11 +18,11 @@
   "scripts": {
     "build": "concurrently npm:build:shared npm:build:server npm:build:agent npm:build:client",
     "postbuild": "copyfiles -u 1 \"src/**/config.json\" dist",
-    "build:agent": "tsc --build src/agent/tsconfig.json",
-    "build:client": "vite build",
-    "build:server": "tsc --build src/view/server/tsconfig.json",
-    "build:shared": "tsc --build src/view/shared/tsconfig.json",
-    "clean": "rimraf dist",
+    "build:agent": "node scripts/build.mjs agent \"tsc --build src/agent/tsconfig.json\"",
+    "build:client": "node scripts/buildFrontend.mjs",
+    "build:server": "node scripts/build.mjs server \"tsc --build src/view/server/tsconfig.json\"",
+    "build:shared": "node scripts/build.mjs shared \"tsc --build src/view/shared/tsconfig.json\"",
+    "clean": "rimraf dist .frontend-build-cache.json .tsc-cache-*.json",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npx nodemon --experimental-specifier-resolution=node dist/view/server/server.js 9052 \"",
     "dev:client": "vite dev",
     "dev:server": "tsc --build src/view/server/tsconfig.json --watch",
