--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -21,17 +21,19 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck",
+    "build": "npm run build:deps && npm run build:parallel",
+    "build:deps": "npm run tsc:common",
     "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite:dev npm:tsc:typecheck",
-    "clean": "rimraf dist deploy",
+    "build:parallel": "concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck",
+    "clean": "rimraf dist deploy .tsbuildinfo && rimraf --glob '.tsc-cache-*.json'",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
     "test": "jest",
-    "tsc:agent": "tsc -p src/agent/tsconfig.json",
-    "tsc:common": "tsc -p src/common/tsconfig.json",
-    "tsc:puppeteer": "tsc -p src/puppeteer/tsconfig.json",
-    "tsc:typecheck": "tsc --noEmit -p tsconfig.json",
+    "tsc:agent": "node scripts/build.mjs agent \"tsc --build src/agent/tsconfig.json\"",
+    "tsc:common": "node scripts/build.mjs common \"tsc --build src/common/tsconfig.json\"",
+    "tsc:puppeteer": "node scripts/build.mjs puppeteer \"tsc --build src/puppeteer/tsconfig.json\"",
+    "tsc:typecheck": "node scripts/build.mjs typecheck \"tsc --noEmit -p tsconfig.json\"",
     "vite": "node scripts/buildExtension.mjs",
     "vite:dev": "node scripts/buildExtension.mjs --dev"
   },
