Update cache files location

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -22,14 +22,14 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run build:deps && npm run build:parallel",
-    "build:deps": "npm run tsc:common && npm run build:views:shared",
+    "build:deps": "npm run tsc:common && npm run build:views:shared && npm run build:views:client",
     "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite:dev npm:tsc:typecheck",
-    "build:parallel": "concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck npm:build:views:client npm:build:views:server",
+    "build:parallel": "concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck npm:build:views:server",
     "build:views": "npm run build:views:shared && concurrently npm:build:views:server npm:build:views:client",
     "build:views:client": "node scripts/buildFrontend.mjs",
     "build:views:server": "node scripts/build.mjs server \"tsc --build src/views/server/tsconfig.json\"",
     "build:views:shared": "node scripts/build.mjs shared \"tsc --build src/views/shared/tsconfig.json\"",
-    "clean": "rimraf dist deploy .tsbuildinfo && rimraf --glob '.tsc-cache-*.json'",
+    "clean": "rimraf dist deploy .tsbuildinfo .build.cache && rimraf --glob '.tsc-cache-*.json'",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
