--- a/ts/packages/agents/markdown/package.json
+++ b/ts/packages/agents/markdown/package.json
@@ -20,7 +20,7 @@
     "postbuild": "copyfiles -u 1 \"src/**/config.json\" dist",
     "build:frontend": "node scripts/buildFrontend.mjs",
     "build:frontend:force": "vite build",
-    "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log .frontend-build-cache.json .tsc-cache-*.json && rimraf .tsbuildinfo",
+    "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log .frontend-build-cache.json .tsc-cache-*.json && rimraf .tsbuildinfo .build.cache",
     "dev": "npm run tsc && node scripts/dev-viewer.js --hmr",
     "dev:frontend": "vite  --watch",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
