--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -22,10 +22,14 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run build:deps && npm run build:parallel",
-    "build:deps": "npm run tsc:common",
+    "build:deps": "npm run tsc:common && npm run build:views:shared && npm run build:views:client",
     "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite:dev npm:tsc:typecheck",
-    "build:parallel": "concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck",
-    "clean": "rimraf dist deploy .tsbuildinfo && rimraf --glob '.tsc-cache-*.json'",
+    "build:parallel": "concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck npm:build:views:server",
+    "build:views": "npm run build:views:shared && concurrently npm:build:views:server npm:build:views:client",
+    "build:views:client": "node scripts/buildFrontend.mjs",
+    "build:views:server": "node scripts/build.mjs server \"tsc --build src/views/server/tsconfig.json\"",
+    "build:views:shared": "node scripts/build.mjs shared \"tsc --build src/views/shared/tsconfig.json\"",
+    "clean": "rimraf dist deploy .tsbuildinfo .build.cache && rimraf --glob '.tsc-cache-*.json'",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
@@ -49,8 +53,13 @@
     "bootstrap": "^5.3.3",
     "chalk": "^5.4.1",
     "common-utils": "workspace:*",
+    "cytoscape": "^3.32.0",
+    "cytoscape-dagre": "^2.5.0",
+    "dagre": "^0.8.5",
     "debug": "^4.4.0",
     "dompurify": "^3.2.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "html-to-text": "^9.0.5",
     "jsonpath": "^1.1.1",
     "knowpro": "workspace:*",
@@ -70,7 +79,11 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/chrome": "^0.0.256",
+    "@types/cytoscape": "^3.21.9",
+    "@types/cytoscape-dagre": "^2.3.3",
+    "@types/dagre": "^0.7.52",
     "@types/debug": "^4.1.12",
+    "@types/express": "^4.17.21",
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.7",
     "@types/jquery": "^3.5.14",
