Restore previous build behavior for browser and markdown agents

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -26,18 +26,18 @@
     "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite:dev npm:tsc:typecheck",
     "build:parallel": "concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite npm:tsc:typecheck npm:build:views:server",
     "build:views": "npm run build:views:shared && concurrently npm:build:views:server npm:build:views:client",
-    "build:views:client": "node scripts/buildFrontend.mjs",
-    "build:views:server": "node scripts/build.mjs server \"tsc --build src/views/server/tsconfig.json\"",
-    "build:views:shared": "node scripts/build.mjs shared \"tsc --build src/views/shared/tsconfig.json\"",
+    "build:views:client": "vite build",
+    "build:views:server": "tsc --build src/views/server/tsconfig.json",
+    "build:views:shared": "tsc --build src/views/shared/tsconfig.json",
     "clean": "rimraf dist deploy .tsbuildinfo .build.cache && rimraf --glob '.tsc-cache-*.json'",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
     "test": "jest",
-    "tsc:agent": "node scripts/build.mjs agent \"tsc --build src/agent/tsconfig.json\"",
-    "tsc:common": "node scripts/build.mjs common \"tsc --build src/common/tsconfig.json\"",
-    "tsc:puppeteer": "node scripts/build.mjs puppeteer \"tsc --build src/puppeteer/tsconfig.json\"",
-    "tsc:typecheck": "node scripts/build.mjs typecheck \"tsc --noEmit -p tsconfig.json\"",
+    "tsc:agent": "tsc --build src/agent/tsconfig.json",
+    "tsc:common": "tsc --build src/common/tsconfig.json",
+    "tsc:puppeteer": "tsc --build src/puppeteer/tsconfig.json",
+    "tsc:typecheck": "tsc --noEmit -p tsconfig.json",
     "vite": "node scripts/buildExtension.mjs",
     "vite:dev": "node scripts/buildExtension.mjs --dev"
   },
