--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -59,6 +59,7 @@
     "readline": "^1.3.0",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
+    "url-resolver": "workspace:*",
     "website-memory": "workspace:*",
     "ws": "^8.17.1"
   },
