--- a/ts/packages/azure-ai-foundry/package.json
+++ b/ts/packages/azure-ai-foundry/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url-resolver",
+  "name": "azure-ai-foundry",
   "version": "0.0.1",
   "description": "Clients for AI APIs used by Microsoft AI Systems team.",
   "homepage": "https://github.com/microsoft/TypeAgent#readme",
