--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -43,6 +43,7 @@
     "action-schema": "workspace:*",
     "agent-rpc": "workspace:*",
     "aiclient": "workspace:*",
+    "azure-ai-foundry": "workspace:*",
     "bootstrap": "^5.3.3",
     "chalk": "^5.4.1",
     "common-utils": "workspace:*",
@@ -59,7 +60,7 @@
     "readline": "^1.3.0",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "url-resolver": "workspace:*",
+  
     "website-memory": "workspace:*",
     "ws": "^8.17.1"
   },
