--- a/ts/packages/azure-ai-foundry/package.json
+++ b/ts/packages/azure-ai-foundry/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/TypeAgent.git",
-    "directory": "ts/packages/aiclient"
+    "directory": "ts/packages/azure-ai-foundry"
   },
   "license": "MIT",
   "author": "Microsoft",
@@ -17,7 +17,7 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "!dist/test"
+    "dist/test"
   ],
   "scripts": {
     "build": "npm run tsc",
