--- a/ts/packages/azure-ai-foundry/package.json
+++ b/ts/packages/azure-ai-foundry/package.json
@@ -17,7 +17,7 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "dist/test"
+    "!dist/test"
   ],
   "scripts": {
     "build": "npm run tsc",
