--- a/python/ta/Makefile
+++ b/python/ta/Makefile
@@ -22,13 +22,17 @@ test: venv
 demo: venv
 	.venv/bin/python -m typeagent.demo
 
-.PHONY: eval
-eval: venv
+.PHONY: compare
+compare: venv
 	.venv/bin/python -m test.cmpsearch
 
 .PHONY: profile
 profile: venv
 	</dev/null .venv/bin/python -m cProfile -s ncalls -m test.cmpsearch --interactive --podcast ~/AISystems-Archive/data/knowpro/test/indexes/All_Episodes_index | head -60
+
+.PHONY: scaling
+scaling: venv
+	</dev/null .venv/bin/python -m test.cmpsearch --interactive --podcast ~/AISystems-Archive/data/knowpro/test/indexes/All_Episodes_index
 
 .PHONY: build
 build: venv
