Added urlResolver and urlValidate commands to schema studio (#1254)
These two commands ensure that URLs can and are resolve properly in
support of the OpenWebPage action of the browser agent.

Added azure-ai-foundry package that wraps up all calls to azure
agent/project SDKs.

---------

Co-authored-by: Curtis Man <curtism@microsoft.com>

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -40,14 +40,12 @@
     "vite:extension:dev": "node scripts/buildExtension.mjs --dev"
   },
   "dependencies": {
-    "@azure/ai-agents": "^1.0.0-beta.3",
-    "@azure/ai-projects": "^1.0.0-beta.8",
-    "@azure/identity": "^4.10.0",
     "@mozilla/readability": "^0.6.0",
     "@typeagent/agent-sdk": "workspace:*",
     "action-schema": "workspace:*",
     "agent-rpc": "workspace:*",
     "aiclient": "workspace:*",
+    "azure-ai-foundry": "workspace:*",
     "bootstrap": "^5.3.3",
     "chalk": "^5.4.1",
     "common-utils": "workspace:*",
