Refactor browser views service code
- Move the plan-specific service views code to a features folder.
- Add PDF views service code. This is setting the stage for us to add pdf.js for viewing and collaborating on pdfs

--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "author": "Microsoft",
   "sideEffects": false,
+  "type": "module",
   "exports": {
     "./agent/manifest": "./src/agent/manifest.json",
     "./agent/handlers": "./dist/agent/actionHandler.mjs",
