--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -29,6 +29,7 @@
     "build:views:server": "tsc --build src/views/server/tsconfig.json",
     "build:views:shared": "tsc --build src/views/shared/tsconfig.json",
     "clean": "rimraf dist deploy .tsbuildinfo .build.cache && rimraf --glob '.tsc-cache-*.json'",
+    "dev:client": "vite serve",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
@@ -60,6 +61,7 @@
     "html-to-text": "^9.0.5",
     "jsonpath": "^1.1.1",
     "knowpro": "workspace:*",
+    "pdfjs-dist": "^5.3.31",
     "prismjs": "^1.30.0",
     "puppeteer": "^23.8.0",
     "puppeteer-extra": "^3.3.6",
