Implement open file by name

--- a/ts/packages/agents/code/src/codeManifest.json
+++ b/ts/packages/agents/code/src/codeManifest.json
@@ -38,6 +38,13 @@
         "schemaFile": "./vscode/editorCommandActionsSchema.ts",
         "schemaType": "CodeEditorActions"
       }
+    },
+    "code-workbench": {
+      "schema": {
+        "description": "Code agent that helps you perform vscode workbench actions like open a file, close a file etc.",
+        "schemaFile": "./vscode/workbenchCommandActionsSchema.ts",
+        "schemaType": "CodeWorkbenchActions"
+      }
     }
   }
 }
