--- a/ts/packages/agents/browser/src/extension/manifest.json
+++ b/ts/packages/agents/browser/src/extension/manifest.json
@@ -1,10 +1,12 @@
 {
   "manifest_version": 3,
   "name": "Browser TypeAgent",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Automates various browser actions.",
   "minimum_chrome_version": "116",
-  "action": {},
+  "action": {
+    "default_popup": "popup.html"
+  },
   "background": {
     "service_worker": "serviceWorker.js",
     "type": "module"
@@ -45,7 +47,12 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["sites/paleobiodb.js", "sites/paleobiodbSchema.mts"],
+      "resources": [
+        "sidepanel.html",
+        "knowledgePanel.html",
+        "sites/paleobiodb.js", 
+        "sites/paleobiodbSchema.mts"
+      ],
       "matches": ["https://paleobiodb.org/*"]
     },
     {
