started adding wikipedia API calls

--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -39,7 +39,11 @@
       "AZURE_STORAGE_ACCOUNT",
       "AZURE_STORAGE_CONTAINER",
       "AZURE_FOUNDRY_AGENT_ID_VALIDATOR",
-      "LOGIC_APP_CONNECTION_ID_GET_HTTP_ENDPOINT"
+      "LOGIC_APP_CONNECTION_ID_GET_HTTP_ENDPOINT",
+      "WIKIPEDIA_ACCESS_TOKEN",
+      "WIKIPEDIA_ENDPOINT",
+      "WIKIPEDIA_CLIENT_SECRET",
+      "WIKIPEDIA_CLIENT_ID"
     ],
     "private": ["SPOTIFY_APP_CLI", "SPOTIFY_APP_CLISEC", "SPOTIFY_APP_PORT"],
     "delete": ["MSGRAPH_APP_PASSWD", "MSGRAPH_APP_USERNAME", "BING_API_KEY"]
