Rename extension pages

--- a/ts/packages/agents/browser/src/extension/manifest.json
+++ b/ts/packages/agents/browser/src/extension/manifest.json
@@ -85,7 +85,7 @@
     "open_in_tab": false
   },
   "side_panel": {
-    "default_path": "views/sidepanel.html"
+    "default_path": "views/pageActions.html"
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
