intercept PDF open operations and show in our pdf reader

--- a/ts/packages/agents/browser/src/extension/manifest.json
+++ b/ts/packages/agents/browser/src/extension/manifest.json
@@ -57,6 +57,10 @@
     {
       "resources": ["uiEventsDispatcher.js"],
       "matches": ["https://*/*"]
+    },
+    {
+      "resources": ["views/pdfView.html", "views/pdfView.js"],
+      "matches": ["<all_urls>"]
     }
   ],
   "permissions": [
