--- a/ts/.vscode/settings.json
+++ b/ts/.vscode/settings.json
@@ -12,6 +12,7 @@
         "oclif",
         "openai",
         "regen",
+        "textpro",
         "tsbuildinfo",
         "typeagent",
         "typechat"
