--- a/ts/examples/chat/package.json
+++ b/ts/examples/chat/package.json
@@ -41,6 +41,7 @@
     "knowpro-test": "workspace:*",
     "memory-providers": "workspace:*",
     "memory-storage": "workspace:*",
+    "textpro": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
     "typescript": "~5.4.5",
