--- a/ts/packages/textPro/package.json
+++ b/ts/packages/textPro/package.json
@@ -27,7 +27,8 @@
     "tsc": "tsc -b"
   },
   "dependencies": {
-    "cheerio": "1.0.0-rc.12"
+    "cheerio": "1.0.0-rc.12",
+    "marked": "16.0.0"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
