--- a/ts/packages/memory/website/package.json
+++ b/ts/packages/memory/website/package.json
@@ -35,7 +35,9 @@
     "common-utils": "workspace:*",
     "conversation-memory": "workspace:*",
     "debug": "^4.4.0",
+    "dompurify": "^3.2.6",
     "get-folder-size": "^5.0.0",
+    "jsdom": "^26.1.0",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
     "memory-storage": "workspace:*",
@@ -47,6 +49,7 @@
     "@types/better-sqlite3": "7.6.11",
     "@types/debug": "^4.1.12",
     "@types/jest": "^29.5.7",
+    "@types/jsdom": "^21.1.7",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
