--- a/ts/packages/textPro/package.json
+++ b/ts/packages/textPro/package.json
@@ -32,7 +32,8 @@
   },
   "devDependencies": {
     "prettier": "^3.5.3",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "typescript": "~5.4.5"
   },
   "engines": {
     "node": ">=20"
