--- a/ts/packages/textPro/package.json
+++ b/ts/packages/textPro/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "knowpro-test",
+  "name": "textpro",
   "version": "0.0.1",
-  "description": "Basic structured RAG implementation",
+  "description": "textpro contains sample library for manipulating text.",
   "homepage": "https://github.com/microsoft/TypeAgent#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/TypeAgent.git",
-    "directory": "ts/packages/knowProTest"
+    "directory": "ts/packages/textPro"
   },
   "license": "MIT",
   "author": "Microsoft",
@@ -21,26 +21,21 @@
   ],
   "scripts": {
     "build": "npm run tsc",
-    "postbuild": "copyfiles -u 1 \"src/**/*Schema*.ts\" dist",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
-    "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
+    "prettier:fix": "prettier --write . --ignore-path ../../prettierignore",
     "tsc": "tsc -b"
   },
   "dependencies": {
-    "aiclient": "workspace:*",
-    "conversation-memory": "workspace:*",
-    "interactive-app": "workspace:*",
-    "knowledge-processor": "workspace:*",
-    "knowpro": "workspace:*",
-    "typeagent": "workspace:*",
-    "typechat": "0.1.1"
+    "cheerio": "1.0.0-rc.12",
+    "marked": "16.0.0"
   },
   "devDependencies": {
-    "copyfiles": "^2.4.1",
-    "dotenv": "^16.3.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "typescript": "~5.4.5"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
