--- a/ts/.vscode/settings.json
+++ b/ts/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "aiclient",
         "AUTOINCREMENT",
+        "Chunker",
         "Exif",
         "exifreader",
         "Knowpro",
