--- a/ts/packages/textPro/package.json
+++ b/ts/packages/textPro/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
-    "marked": "16.0.0"
+    "marked": "16.0.0",
+    "knowledge-processor": "workspace:*"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
