adding separate schema to handle extension related tasks

--- a/ts/packages/agents/code/src/codeManifest.json
+++ b/ts/packages/agents/code/src/codeManifest.json
@@ -45,6 +45,13 @@
         "schemaFile": "./vscode/workbenchCommandActionsSchema.ts",
         "schemaType": "CodeWorkbenchActions"
       }
+    },
+    "code-extension": {
+      "schema": {
+        "description": "Code agent that helps you perform vscode extension actions like show, install, update, enable, disable, uninstall extensions etc.",
+        "schemaFile": "./vscode/extensionsActionsSchema.ts",
+        "schemaType": "CodeWorkbenchExtensionActions"
+      }
     }
   }
 }
