textPro: Markdown knowledge, tags, blocks (#1335)
* Markdown parse + knowledge + tags extraction
* Refinements/refactoring + indexing in DocMemory coming

--- a/ts/packages/textPro/package.json
+++ b/ts/packages/textPro/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
+    "knowledge-processor": "workspace:*",
     "marked": "16.0.0"
   },
   "devDependencies": {
