Use readability and htmlreducer to pre-process html when importing from bookmarks, history or folder

--- a/ts/packages/agents/browser/src/agent/tsconfig.json
+++ b/ts/packages/agents/browser/src/agent/tsconfig.json
@@ -8,5 +8,6 @@
     "types": ["node"]
   },
   "include": ["./**/*"],
+  "exclude": ["./backup/**/*"],
   "references": [{ "path": "../common" }]
 }
