--- a/ts/packages/agents/browser/src/common/tsconfig.json
+++ b/ts/packages/agents/browser/src/common/tsconfig.json
@@ -5,6 +5,7 @@
     "incremental": true,
     "rootDir": ".",
     "outDir": "../../dist/common",
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "types": ["node"]
   },
   "include": ["./**/*"]
