--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -65,6 +65,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
     "html-to-text": "^9.0.5",
+    "jsdom": "^26.1.0",
     "jsonpath": "^1.1.1",
     "knowledge-processor": "workspace:*",
     "knowpro": "workspace:*",
