--- a/ts/packages/agents/browser/src/agent/manifest.json
+++ b/ts/packages/agents/browser/src/agent/manifest.json
@@ -3,6 +3,12 @@
   "defaultEnabled": true,
   "description": "Agent that allows you control an existing browser window",
   "localView": true,
+  "indexingServices": {
+    "website": {
+      "serviceScript": "./dist/agent/indexing/browserIndexingService.js",
+      "description": "Enhanced website indexing with knowledge extraction"
+    }
+  },
   "schema": {
     "description": "Browser agent that allows you control an existing browser window and perform actions such as opening a new tab, closing a tab, scrolling, zooming and navigating to a specific URL.",
     "schemaFile": "./actionsSchema.mts",
