--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "build>=1.2.2.post1",
   "colorama>=0.4.6",
   "coverage>=7.9.1",
+  "mcp[cli]>=1.12.1",
   "numpy>=2.2.6",
   "openai>=1.81.0",
   "pydantic>=2.11.4",
