Makefile: Add 'mcp' command

--- a/python/ta/Makefile
+++ b/python/ta/Makefile
@@ -26,6 +26,10 @@ demo: venv
 compare: venv
 	.venv/bin/python -m tools.utool --batch $(FLAGS)
 
+.PHONY: mcp
+mcp: venv
+	.venv/bin/mcp dev typeagent/mcp/server.py
+
 .PHONY: profile
 profile: venv
 	</dev/null .venv/bin/python -m cProfile -s ncalls -m test.cmpsearch --interactive --podcast ~/AISystems-Archive/data/knowpro/test/indexes/All_Episodes_index | head -60
@@ -63,12 +67,12 @@ help:
 	@echo "make help        # Help (this message)"
 	@echo "make             # Same as 'make all'"
 	@echo "make all         # venv, format, check, test, build"
-	@echo "make demo        # python tools/utools.py (interactive)"
-	@echo "make compare     # python tools/utools.py --batch"
 	@echo "make format      # Run black"
 	@echo "make check       # Run pyright"
 	@echo "make test        # Run pytest (tests are in test/)"
 	@echo "make build       # Build the wheel (under dist/)"
+	@echo "make demo        # python tools/utools.py (interactive)"
+	@echo "make compare     # python tools/utools.py --batch"
 	@echo "make venv        # Create .venv/"
 	@echo "make clean       # Remove build/, dist/, .venv/, *.egg-info/"
 	@echo "make install-uv  # Install uv (if not already installed)"
