--- a/ts/examples/websiteAliases/package.json
+++ b/ts/examples/websiteAliases/package.json
@@ -27,18 +27,21 @@
   "dependencies": {
     "@azure/ai-agents": "^1.0.0-beta.3",
     "@azure/ai-projects": "^1.0.0-beta.8",
-    "@azure/identity": "^4.10.0",    
+    "@azure/identity": "^4.10.0",
     "azure-ai-foundry": "workspace:*",
     "chalk": "^5.4.1",
     "code-processor": "workspace:*",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
     "dotenv": "^16.3.1",
+    "fs-extra": "^11.3.0",
+    "puppeteer": "^23.11.1",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
     "typescript": "~5.4.5"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
     "typescript": "~5.4.5"
