--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
   "numpy>=2.2.6",
   "openai>=1.81.0",
   "pydantic>=2.11.4",
+  "pydantic-ai-slim[openai]>=0.4.9",
   "pyright==1.1.403",
   "pytest>=8.3.5",
   "pytest-asyncio>=0.26.0",
