--- a/.gitignore
+++ b/.gitignore
@@ -449,3 +449,4 @@ android/samples/mobile/.idea/deploymentTargetSelector.xml
 
 # Everybody gets to maintain their own .github/instructions/ folder
 /.github/instructions/
+/ts/.tools
