--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -19,9 +19,11 @@ dependencies = [
   "build>=1.2.2.post1",
   "colorama>=0.4.6",
   "coverage>=7.9.1",
+  "logfire>=4.1.0",
   "mcp[cli]>=1.12.1",
   "numpy>=2.2.6",
   "openai>=1.81.0",
+  "opentelemetry-instrumentation-httpx>=0.57b0",
   "pydantic>=2.11.4",
   "pydantic-ai-slim[openai]>=0.4.9",
   "pyright==1.1.403",
